--- a/app/src/main/res/layout/activity_config_round.xml
+++ b/app/src/main/res/layout/activity_config_round.xml
@@ -67,21 +67,23 @@
             android:ems="10"
             android:hint="@string/acr_arrowByEnd"
             android:inputType="numberDecimal"
+            android:textAlignment="center"
             app:layout_constraintTop_toBottomOf="@id/bLetGo"
             tools:layout_editor_absoluteY="0dp" />
 
         <EditText
             android:id="@+id/INumberEndByRound"
-            android:hint="@string/acr_EndByRound"
             android:layout_width="50dp"
             android:layout_height="48dp"
             android:layout_weight="1"
             android:background="@drawable/it_style"
-
+            android:contentDescription="@string/acr_EndByRound"
             android:ems="10"
             android:inputType="numberDecimal"
+            android:textAlignment="center"
             app:layout_constraintStart_toEndOf="@id/INumberArrow"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/acr_EndByRound" />
 
         <EditText
             android:id="@+id/newArcher"
@@ -89,7 +91,7 @@
             android:layout_height="48dp"
             android:layout_weight="6"
             android:background="@drawable/it_style"
-            android:contentDescription="Name of new archer"
+            android:hint="@string/name_archer"
             android:importantForAutofill="no"
             android:inputType="textCapSentences"
             android:lines="1"
@@ -103,7 +105,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/am_buttonshape_grey"
-            android:contentDescription="add archer to base"
+            android:contentDescription="@string/addArcher"
             android:text="@string/addArcher"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/newArcher"
